2016-11-23  Karl Berry  <karl@freefriends.org>

	* tex4ht-mathml.tex: Copyright 2016.

2016-11-22 Michal Hoftich <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): added \a:mathml commands
	before some attributes where it was missing. This ensures use of
	mathml: prefix if it is used in the output format

	* tex4ht-ooffice.tex (ooffice-mml.4ht): Removed configurations
	of 'left' and 'right', default configurations from mathml.4ht
	should be used instead

2016-11-21 Michal Hoftich <michal.h21@gmail.com>

	* tex4ht-mathml.tex (mathml.4ht): added \let\columnlines\empty
	before use of \columnlines in \Configure{halignTB<>}. It caused
	compilation error in ooffice mode.

2016-10-05 Deimantas Galcius <deimantas.galcius@gmail.com>

	* Makefile (d) Experimental target "d" for dependency/derived files.
	* Makefile (tohtmldir) move html files to html.dir
	* Makefile (toderivedir) move derived files to derived.dir
	* extra-bin/fls2d, extra-bin/flslg2d: scripts to read *fls/*.lg
	and output *.d file

2016-10-03 Deimantas Galcius <deimantas.galcius@gmail.com>

	* Makefile (PATH): set PATH to look into $extra_bin and $ht_bin;
	TeXLive 2016 (DVD) does not ship with 'xhlatex', so we find it in $ht_bin.
	* Makefile (tex_options): set '-recorder' option to $tex_opts. We want to know
	deps/derived files
	* Makefile (clean): add '*.fls' for removal
	* Makefile (ht tex): replace with $(HTTEX) which respects $tex_opts
	* Makefile ("-d./" in htlatex calls): replace "-d./" with "".
	"-d./" means move generated files to current folder, which does not make sense.
	* Makefile (html4): Amend $(tex4ht_html4_derived) rule. No dependency on
	html4.4ht-released
	* Remove (html4.4-released): Delete file. (hopefully) not needed any more.
	* Makefile: change $(dev_null) to "".

2016-09-29 Deimantas Galcius <deimantas.galcius@gmail.com>

	* common-info.tex (CleanComment): fix CleanComment to not
	raise latex run error on first pass.